<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.MainActivity">


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/character_recycler"
        android:layout_width="match_parent"
        android:layout_height="670dp"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="0dp" />

    <LinearLayout
        android:id="@+id/bottomBarNav"
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:layout_below="@+id/character_recycler"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="-1dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="1dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/main_act_prev"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/btn_prev" />

        <TextView
            android:id="@+id/pagination_index_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/wendy_one"
            android:gravity="center"
            android:text="@string/pag_title"
            android:textSize="20sp" />


        <Button
            android:id="@+id/main_act_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/btn_next" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="0dp"
        android:fontFamily="@font/bungee"
        android:paddingHorizontal="10dp"
        android:text="@string/title_main_act"
        android:textSize="24sp" />


</RelativeLayout>